<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/balancer_settings">

        <EditTextPreference
            app:icon="@drawable/ic_social_emoji_symbols"
            app:key="profileName"
            app:title="@string/profile_name"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/balancer_type_entries"
            app:entryValues="@array/balancer_type_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="balancerType"
            app:title="@string/balancer_type"
            app:useSimpleSummaryProvider="true" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="random"
            app:entries="@array/balancer_strategy_entries"
            app:entryValues="@array/balancer_strategy_values"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="balancerStrategy"
            app:title="@string/balancer_strategy"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:icon="@drawable/ic_baseline_view_list_24"
            app:key="balancerTargetGroup"
            app:title="@string/balancer_select_group" />

        <io.nekohasekai.sagernet.widget.OutboundPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="balancerFrontProxy"
            app:title="@string/front_proxy"
            app:useSimpleSummaryProvider="true" />

        <io.nekohasekai.sagernet.widget.OutboundPreference
            app:icon="@drawable/baseline_public_24"
            app:key="balancerLandingProxy"
            app:title="@string/landing_proxy"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_hardware_router"
            app:key="balancerUseFrontProxy"
            app:title="@string/balancer_use_front_proxy" />

        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/baseline_public_24"
            app:key="balancerUseLandingProxy"
            app:title="@string/balancer_use_landing_proxy" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_delete_24"
            app:key="balancerNameExclude"
            app:title="@string/balancer_name_exclude"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="balancerNameInclude"
            app:title="@string/balancer_name_include"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="balancerTestUrl"
            app:title="@string/balancer_custom_url"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:defaultValue="300"
            app:icon="@drawable/ic_baseline_local_bar_24"
            app:key="balancerInterval"
            app:title="@string/balancer_interval"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:defaultValue="300"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="balancerTolerance"
            app:title="@string/balancer_tolerance"
            app:useSimpleSummaryProvider="false" />

        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="ms"
            app:entries="@array/tolerance_unit_entries"
            app:entryValues="@array/tolerance_unit_values"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="balancerToleranceUnit"
            app:title="@string/balancer_tolerance_unit"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
